--- a/matriculador/configuration/sip.conf
+++ b/matriculador/configuration/sip.conf
@@ -3,6 +3,9 @@ context=internal
 allowguest=no
 udpbindaddr=0.0.0.0
 srvlookup=yes
+externip=__EXTERN_IP__
+localnet=172.17.0.0/255.255.0.0
+nat=force_rport,comedia
 
 [1000]
 type=friend
